# ETech-Signal-Plot-Lab

./: README.md
C++/: CMakeLists.txt
C++/Freq_Analyzer/: ADCBuffer.cpp  ADCBuffer.h  Analyzer.cpp  Analyzer.h  CMakeLists.txt  SignalGenerator.cpp  SignalGenerator.h  Timer.cpp  main.cpp
C++/Freq_Analyzer/dsp/: FFT.cpp  FFT.h
C++/Freq_Analyzer/hw/: ADCBuffer.cpp  Timer.cpp  Timer.h
C++/Freq_Analyzer/signal/: SignalGenerator.cpp
C++/Freq_Analyzer/src/: main.cpp
C++/Freq_Analyzer/src/buffer/: RingBuffer.cpp  RingBuffer.h
C++/Freq_Analyzer/src/dsp/: Analyzer.cpp  Window.cpp  Window.h
C++/Freq_Analyzer/src/hw/: ADCBuffer.h
C++/include/: Analyzer.h  SignalBuffer.h
C++/src/: Analyzer.cpp  SignalBuffer.cpp  main.cpp
circuits/: Filter_Toolkit.py  RC_LowPass.py
comms/: Canal_Effect_Lab.py  Doppler_Effect.py  HF_Impedance_Matching.py  Spectrum_analyzer.py  hf-antenna-pattern.py
comms/Modulation/: Modulation_Toolkit.py
comms/comms/: 3D-FieldVisualisation.py  hf-antenna-pattern.py
src/comms/: HF_Impedance_Matching.py  Smitch_Chart_Plot.py
src/control/: Op_Amps_Inverter_Plotter.py  Op_Amps_Komporator.py  Op_Amps_Plotter.py  Op_Anos_Komporator.py
src/filters/: Active_Lowpassfilter_Sallen-Key.py  tschebyscheff_Filter.py
src/signals/: RLC_Simulator.py  signal_demo.py  signal_demo_v2.py  sine_cos.py  square_triangle.py  square_triangles.py
